update to CV url

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
         <img src="images/headshot.jpg" alt="My Headshot" class="headshot">
         <p>Hello! Welcome to my research home page.</p>
-        <p>For more details, check out my <a href="cv.pdf" target="_blank">CV</a>.</p>
+        <p>For more details, check out my <a href="CV.pdf" target="_blank">CV</a>.</p>
         <p>Here, you can find my publications and the books/material I have worked on.</p>
     </section>
 </body>
