updated to the index/about section

--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
 </head>
 <body>
     <header>
-        <h1>About Me</h1>
+        <h1>Martin Lund Trinhammer</h1>
         <nav>
             <a href="index.html">About</a>
             <a href="publications.html">Publications</a>
-            <a href="books.html">Books/Material</a>
+            <a href="books.html">My Reading List</a>
         </nav>
     </header>
 
     <section>
         <img src="images/headshot.jpg" alt="My Headshot" class="headshot">
-        <p>Hello! Welcome to my research home page.</p>
+        <p>Thank you for visiting my research profile!</p>
+        <p>I am a 2nd year PhD student at the IT University of Copenhagen and at the Pioneer Centre for Artificial Intelligence</p>
+        <p>My passion is the intersection of psychology and AI, working predominantly in the mental health domain. I am originally a psychologist, now immersed in CS/AI </p>
         <p>For more details, check out my <a href="CV.pdf" target="_blank">CV</a>.</p>
-        <p>Here, you can find my publications and the books/material I have worked on.</p>
+        <p>Check out my Publications for previous and current projects. I have also included "My Reading List" here to give you a tour into all the fantastic material that comprises my body of knowledge </p>
+        <p>Feel free to reach out on mlut@itu.dk or mltrinhammer@gmail.com </p>
     </section>
 </body>
 </html>
