updates to index.html

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <section>
         <img src="images/headshot.jpg" alt="My Headshot" class="headshot">
         <p>Thank you for visiting my research profile!</p>
-        <p>I am a 2nd year PhD student at the IT University of Copenhagen and at the Pioneer Centre for Artificial Intelligence</p>
-        <p>My passion is the intersection of psychology and AI, working predominantly in the mental health domain. I am originally a psychologist, now immersed in CS/AI </p>
+        <p>I am a psychologist-turned-computer scientist, currently pursuing a PhD student at the IT University of Copenhagen and at <a href="https://www.aicentre.dk/" target="_blank">the Pioneer Centre for Artificial Intelligence</a>. </p>
+        <p>My passion is the intersection of psychology and AI, working predominantly in the mental health domain. </p>
         <p>For more details, check out my <a href="CV.pdf" target="_blank">CV</a>.</p>
-        <p>Check out my Publications for previous and current projects. I have also included "My Reading List" here to give you a tour into all the fantastic material that comprises my body of knowledge </p>
-        <p>Feel free to reach out on mlut@itu.dk or mltrinhammer@gmail.com </p>
+        <p>For previous and current projects, visit "Publications". I have also included "My Reading List" here to give you a tour into all the fantastic material that comprises my body of knowledge </p>
+        <p>Feel free to reach out on mlut@itu.dk. </p>
     </section>
 </body>
 </html>
