--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
 
     <section>
-        <img src="images/headshot.jpg" alt="My Headshot" class="headshot">
+        <img src="images/headshot.jpg" alt="My Headshot" class="image">
         <p>Thank you for visiting my research profile!</p>
-        <p>I am a psychologist-turned-computer scientist, currently pursuing a PhD student at the IT University of Copenhagen and at <a href="https://www.aicentre.dk/" target="_blank">the Pioneer Centre for Artificial Intelligence</a>. </p>
+        <p>I am a psychologist-turned-computer scientist, currently pursuing a PhD at the IT University of Copenhagen and at <a href="https://www.aicentre.dk/" target="_blank">the Pioneer Centre for Artificial Intelligence</a>. </p>
         <p>My passion is the intersection of psychology and AI, working predominantly in the mental health domain. </p>
         <p>For more details, check out my <a href="CV.pdf" target="_blank">CV</a>.</p>
         <p>For previous and current projects, visit "Publications". I have also included "My Reading List" here to give you a tour into all the fantastic material that comprises my body of knowledge </p>
