--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
             <a href="books.html">My Reading List</a>
         </nav>
     </header>
-
+<style>
+    .custom-image {
+        width: 50%; /* Responsive: 50% of the parent container */
+        height: auto; /* Maintains aspect ratio */
+    }
+    </style>
     <section>
-        <img src="images/headshot.jpg" alt="My Headshot" class="image">
+        <img src="images/headshot.jpg" alt="My Headshot" class="custom-image">
         <p>Thank you for visiting my research profile!</p>
         <p>I am a psychologist-turned-computer scientist, currently pursuing a PhD at the IT University of Copenhagen and at <a href="https://www.aicentre.dk/" target="_blank">the Pioneer Centre for Artificial Intelligence</a>. </p>
         <p>My passion is the intersection of psychology and AI, working predominantly in the mental health domain. </p>
