updates to cv, publications

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
 <style>
     .custom-image {
-        width: 15%; /* Responsive: 50% of the parent container */
-        height: auto; /* Maintains aspect ratio */
+        width: 8%; 
+        height: auto; 
     }
     </style>
     <section>
