--- a/publications.html
+++ b/publications.html
@@ -22,9 +22,10 @@
         <h2>My Research Publications</h2>
         <p>Here you will find a list of my published papers and articles.</p>
         <ul>
-            <li>Publication 1 - Journal XYZ</li>
-            <li>Publication 2 - Conference ABC</li>
-            <!-- Add more as needed -->
+            <li>Trinhammer, M.L., Egmose, I., Krogh, M.T., Stuart, A.C., Vaever, M.S., Brandt, S.B., Grasshof, S. (2025). Evaluating Open-Source Solutions for Computerized Inference of Infant Facial Affect. Developmental Science. In press</li>
+            <li>Trinhammer, ML., Grasshof, S., Kessing, L.V., Kjaerstad, H.L., Miskowiak, K. W., Brandt, S.B. (2025). Don't predict if you cannot interpret? Investigating the clinical viability of facial movements for computational diagnostics of bipolar disorder. Neuroscience Applied. In press</li>
+            <li>Bredgaard, F., Trinhammer, M. L., & Bassignana, E. (2025). The Language of Attachment: Modeling Attachment Dynamics in Psychotherapy. arXiv preprint arXiv:2504.16271.</li>
+            <li>Trinhammer, M. L., Merrild, A. H., Lotz, J. F., & Makransky, G. (2022). Predicting crime during or after psychiatric care: Evaluating machine learning for risk assessment using the Danish patient registries. Journal of psychiatric research, 152, 194-200.</li>
         </ul>
     </section>
 </body>
