--- a/books.html
+++ b/books.html
@@ -3,9 +3,21 @@
 <head>
     <title>Books/Material - MLT94</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        header { margin-bottom: 20px; }
-        nav a { margin-right: 15px; text-decoration: none; color: blue; }
+        body { 
+            font-family: Arial, sans-serif; 
+            margin: 20px; 
+        }
+        header { 
+            margin-bottom: 20px; 
+        }
+        nav a { 
+            margin-right: 15px; 
+            text-decoration: none; 
+            color: blue; 
+        }
+        section {
+            margin-bottom: 40px;
+        }
     </style>
 </head>
 <body>
@@ -19,12 +31,36 @@
     </header>
 
     <section>
-        <h2>Books and Educational Material</h2>
-        <p>This section contains links and information about the books I have authored or contributed to.</p>
+        <p>Below is a collection of the books, papers and podcasts that has had a significant influence on me the past 10 years; I include them to give anyone interested both some inspiration and some insights into what consitutes the foundations for my thinking and scientific reasoning</p>
+        
         <ul>
-            <li>Book 1 - Title</li>
-            <li>Book 2 - Title</li>
-            <!-- Add more as needed -->
+            <li><strong>Best Books I've Read:</strong></li>
+            <ul>
+                <li>🔖 David Mackay — <em>Learning Theory: Inference and Algorithms</em> (2003)</li>
+                <li>🔖 Matthew Ball — <em>The Metaverse</em> (2022)</li>
+                <li>🔖 Stephen Jay Gould — <em>Ontogeny and Phylogeny</em> (1977)</li>
+                <li>🔖 Ole Andkjær & Simo Køppe — <em>Freud's Psychoanalysis</em> (1978)</li>
+                <li>🔖 Marcel Proust — <em>In Search of Lost Time</em> (1913–1927) <small>(Can't claim to have read it all!)</small></li>
+                <li>🔖 Brian Hare — <em>Survival of the Friendliest</em> (2020)</li>
+                <li>🔖 Eckhart Tolle — <em>The Power of Now</em> (1997)</li>
+                <li>🔖 Thomas Parr, Giovanni Pezzulo, Karl Friston — <em>Active Inference: The Free Energy Principle in Mind, Brain, and Behavior</em> (2023, projected)</li>
+                <li>🔖 Hartmut Rosa — <em>The Uncontrollability of the World</em> (2020)</li>
+            </ul>
+
+            <li><strong>Best Articles:</strong></li>
+            <ul>
+                <li>✍️ Kleinberg, Jon, et al. "The inversion problem: Why algorithms should infer mental state and not just predict behavior." Perspectives on Psychological Science 19.5 (2024): 827-838.</li>
+                <li>✍️ Kleinberg, Jon, Sendhil Mullainathan, and Manish Raghavan. "The challenge of understanding what users want: Inconsistent preferences and engagement optimization." Management science 70.9 (2024): 6336-6355.</li>
+                <li>✍️ Miller, Kevin, et al. "Cognitive model discovery via disentangled RNNs." Advances in Neural Information Processing Systems 36 (2023): 61377-61394.</li>
+                <li>✍️ Hassabis, Demis, et al. "Neuroscience-inspired artificial intelligence." Neuron 95.2 (2017): 245-258.</li>
+                <li>✍️ Brinkmann, Svend. "Problems of diagnostic psychiatry—and the search for a way forward." Nordic Psychology 76.4 (2024): 446-461.</li>
+                <li>✍️ Chatziagapi, Aggelina, et al. "AV-Flow: Transforming Text to Audio-Visual Human-like Interactions." arXiv preprint arXiv:2502.13133 (2025).</li>
+            </ul>
+
+            <li><strong>Podcasts:</strong></li>
+            <ul>
+                <li>🎧 The Double-Edged Sword of AI, with Dr. Ziad Obermeyer, NEJM AI Grand Rounds (2023) Spotify</li>
+            </ul>
         </ul>
     </section>
 </body>
