--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
         <p>For previous and current projects, visit "Publications". I have also included "My Reading List" here to give you a tour into all the fantastic material that comprises my body of knowledge. </p>
         <p>Feel free to reach out on mlut@itu.dk. </p>
         <p>
-            Visit my GitHub profile: 
             <a href="https://github.com/mlt94" class="github-link" target="_blank">
                 <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo">
-                My GitHub
+                GitHub
             </a>
         </p>
     </section>
