--- a/publications.html
+++ b/publications.html
@@ -3,9 +3,18 @@
 <head>
     <title>Publications - MLT94</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        header { margin-bottom: 20px; }
-        nav a { margin-right: 15px; text-decoration: none; color: blue; }
+        body { 
+            font-family: Arial, sans-serif; 
+            margin: 20px; 
+        }
+        header { 
+            margin-bottom: 20px; 
+        }
+        nav a { 
+            margin-right: 15px; 
+            text-decoration: none; 
+            color: blue; 
+        }
     </style>
 </head>
 <body>
@@ -17,6 +26,16 @@
             <a href="books.html">Books/Material</a>
         </nav>
     </header>
+
+    <section>
+        <h2>Current Projects</h2>
+        <p>Here is a list of my ongoing research projects:</p>
+        <ul>
+            <li>🔄 One thing I struggle to understand is why we in the psychological domain constantly needs expert-annotated labels for our supervised modeling. My intuition is that individuals, through their non-verbal behavior, are constantly "labeling" their internal state of mind themselves. Right now you are "labeling" what you think of reading this, as evident in your facial movements and pupilometry. My next project relates to learning these patterns unsupervised in psychotherapy depending on what emotional topic the client is talking about, which we will synthesize with an LLM. I expect to use a disentangled temporal model for learning this.</li>
+            <li>🔄 I am engaged in plenty of work related to LLM and psychotherapy research, both foundational questions and implementation projects </li>
+            <li>🔄 The area of brain-computer infaces has recently also caught my attention, and I am keeping a sharp eye on it! </li>
+        </ul>
+    </section>
 
     <section>
         <h2>My Research Publications</h2>
