couple typos fixed

--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
         <h2>Current Projects</h2>
         <p>Here is a list of my ongoing research projects:</p>
         <ul>
-            <li>🔄 One thing I struggle to understand is why we in the psychological domain constantly needs expert-annotated labels for our supervised modeling. My intuition is that individuals, through their non-verbal behavior, are constantly "labeling" their internal state of mind themselves. Right now you are "labeling" what you think of reading this, as evident in your facial movements and pupilometry. My next project relates to learning these patterns unsupervised in psychotherapy depending on what emotional topic the client is talking about, which we will synthesize with an LLM. I expect to use a disentangled temporal model for learning this.</li>
+            <li>🔄 One thing I struggle to understand is why we in the psychological domain constantly need expert-annotated labels for our supervised modeling. My intuition is that individuals, through their non-verbal behavior, are constantly "labeling" their internal state of mind themselves. Right now you are "labeling" what you think of reading this, as evident in your facial movements and pupilometry. My next project relates to learning these patterns unsupervised in psychotherapy depending on what emotional topic the client is talking about, which we will synthesize with an LLM. I expect to use a disentangled temporal model for learning this.</li>
             <li>🔄 I am engaged in plenty of work related to LLM and psychotherapy research, both foundational questions and implementation projects </li>
             <li>🔄 The area of brain-computer infaces has recently also caught my attention, and I am keeping a sharp eye on it! </li>
         </ul>
@@ -41,10 +41,10 @@
         <h2>My Research Publications</h2>
         <p>Here you will find a list of my published papers and articles.</p>
         <ul>
-            <li>Trinhammer, M.L., Egmose, I., Krogh, M.T., Stuart, A.C., Vaever, M.S., Brandt, S.B., Grasshof, S. (2025). Evaluating Open-Source Solutions for Computerized Inference of Infant Facial Affect. Developmental Science. In press</li>
-            <li>Trinhammer, ML., Grasshof, S., Kessing, L.V., Kjaerstad, H.L., Miskowiak, K. W., Brandt, S.B. (2025). Don't predict if you cannot interpret? Investigating the clinical viability of facial movements for computational diagnostics of bipolar disorder. Neuroscience Applied. In press</li>
-            <li>Bredgaard, F., Trinhammer, M. L., & Bassignana, E. (2025). The Language of Attachment: Modeling Attachment Dynamics in Psychotherapy. arXiv preprint arXiv:2504.16271.</li>
-            <li>Trinhammer, M. L., Merrild, A. H., Lotz, J. F., & Makransky, G. (2022). Predicting crime during or after psychiatric care: Evaluating machine learning for risk assessment using the Danish patient registries. Journal of psychiatric research, 152, 194-200.</li>
+            <li>✍️ Trinhammer, M.L., Egmose, I., Krogh, M.T., Stuart, A.C., Vaever, M.S., Brandt, S.B., Grasshof, S. (2025). Evaluating Open-Source Solutions for Computerized Inference of Infant Facial Affect. Developmental Science. In press</li>
+            <li>✍️ Trinhammer, ML., Grasshof, S., Kessing, L.V., Kjaerstad, H.L., Miskowiak, K. W., Brandt, S.B. (2025). Don't predict if you cannot interpret: Investigating the clinical viability of facial movements for computational diagnostics of bipolar disorder. Neuroscience Applied. In press</li>
+            <li>✍️ Bredgaard, F., Trinhammer, M. L., & Bassignana, E. (2025). The Language of Attachment: Modeling Attachment Dynamics in Psychotherapy. arXiv preprint arXiv:2504.16271.</li>
+            <li>✍️ Trinhammer, M. L., Merrild, A. H., Lotz, J. F., & Makransky, G. (2022). Predicting crime during or after psychiatric care: Evaluating machine learning for risk assessment using the Danish patient registries. Journal of psychiatric research, 152, 194-200.</li>
         </ul>
     </section>
 </body>
