--- a/books.html
+++ b/books.html
@@ -43,8 +43,10 @@
                 <li>🔖 Marcel Proust — <em>In Search of Lost Time</em> (1913–1927) <small>(Can't claim to have read it all!)</small></li>
                 <li>🔖 Brian Hare — <em>Survival of the Friendliest</em> (2020)</li>
                 <li>🔖 Eckhart Tolle — <em>The Power of Now</em> (1997)</li>
-                <li>🔖 Thomas Parr, Giovanni Pezzulo, Karl Friston — <em>Active Inference: The Free Energy Principle in Mind, Brain, and Behavior</em> (2023, projected)</li>
+                <li>🔖 Thomas Parr, Giovanni Pezzulo, Karl Friston — <em>Active Inference: The Free Energy Principle in Mind, Brain, and Behavior</em> (2023)</li>
                 <li>🔖 Hartmut Rosa — <em>The Uncontrollability of the World</em> (2020)</li>
+                <li>🔖 Neville Symington — <em>The Making of a Psychotherapist</em> (1996)</li>
+
             </ul>
 
             <li><strong>Best Articles:</strong></li>
