updated a couple items to the material tab

--- a/books.html
+++ b/books.html
@@ -57,6 +57,9 @@
                 <li>✍️ Hassabis, Demis, et al. "Neuroscience-inspired artificial intelligence." Neuron 95.2 (2017): 245-258.</li>
                 <li>✍️ Brinkmann, Svend. "Problems of diagnostic psychiatry—and the search for a way forward." Nordic Psychology 76.4 (2024): 446-461.</li>
                 <li>✍️ Chatziagapi, Aggelina, et al. "AV-Flow: Transforming Text to Audio-Visual Human-like Interactions." arXiv preprint arXiv:2502.13133 (2025).</li>
+                <li>✍️ Barrett, Lisa Feldman, et al. "Emotional expressions reconsidered: Challenges to inferring emotion from human facial movements." Psychological science in the public interest 20.1 (2019): 1-68.</li>
+                <li>✍️ Thuesen, Mette. "Terapeutens behov for at hele." Matrix 32.1 (2015): 4-26. (Only in Danish..) <li>
+                <li>✍️ Metzger, Sean L., et al. "A high-performance neuroprosthesis for speech decoding and avatar control." Nature 620.7976 (2023): 1037-1046.</li>
             </ul>
 
             <li><strong>Podcasts:</strong></li>
