updated a couple items to the material tab

--- a/books.html
+++ b/books.html
@@ -46,7 +46,6 @@
                 <li>🔖 Thomas Parr, Giovanni Pezzulo, Karl Friston — <em>Active Inference: The Free Energy Principle in Mind, Brain, and Behavior</em> (2023)</li>
                 <li>🔖 Hartmut Rosa — <em>The Uncontrollability of the World</em> (2020)</li>
                 <li>🔖 Neville Symington — <em>The Making of a Psychotherapist</em> (1996)</li>
-
             </ul>
 
             <li><strong>Best Articles:</strong></li>
@@ -58,7 +57,7 @@
                 <li>✍️ Brinkmann, Svend. "Problems of diagnostic psychiatry—and the search for a way forward." Nordic Psychology 76.4 (2024): 446-461.</li>
                 <li>✍️ Chatziagapi, Aggelina, et al. "AV-Flow: Transforming Text to Audio-Visual Human-like Interactions." arXiv preprint arXiv:2502.13133 (2025).</li>
                 <li>✍️ Barrett, Lisa Feldman, et al. "Emotional expressions reconsidered: Challenges to inferring emotion from human facial movements." Psychological science in the public interest 20.1 (2019): 1-68.</li>
-                <li>✍️ Thuesen, Mette. "Terapeutens behov for at hele." Matrix 32.1 (2015): 4-26. (Only in Danish..) <li>
+                <li>✍️ Thuesen, Mette. "Terapeutens behov for at hele." Matrix 32.1 (2015): 4-26. <li>
                 <li>✍️ Metzger, Sean L., et al. "A high-performance neuroprosthesis for speech decoding and avatar control." Nature 620.7976 (2023): 1037-1046.</li>
             </ul>
 
