--- a/books.html
+++ b/books.html
@@ -57,8 +57,11 @@
                 <li>✍️ Brinkmann, Svend. "Problems of diagnostic psychiatry—and the search for a way forward." Nordic Psychology 76.4 (2024): 446-461.</li>
                 <li>✍️ Chatziagapi, Aggelina, et al. "AV-Flow: Transforming Text to Audio-Visual Human-like Interactions." arXiv preprint arXiv:2502.13133 (2025).</li>
                 <li>✍️ Barrett, Lisa Feldman, et al. "Emotional expressions reconsidered: Challenges to inferring emotion from human facial movements." Psychological science in the public interest 20.1 (2019): 1-68.</li>
-                <li>✍️ Thuesen, Mette. "Terapeutens behov for at hele." Matrix 32.1 (2015): 4-26. <li>
+                <li>✍️ Thuesen, Mette. "Terapeutisk forandring gennem terapeutens egne emotionelle Processor" Psyke og Logos 33.1 (2012): 66-86. </li>
                 <li>✍️ Metzger, Sean L., et al. "A high-performance neuroprosthesis for speech decoding and avatar control." Nature 620.7976 (2023): 1037-1046.</li>
+                <li>✍️ Cardeña, Etzel. "What psi research can and cannot say about mind beyond the brain." International Review of Psychiatry (2025): 1-5.</li>
+                <li>✍️ Storm, Lance, Patrizio E. Tressoldi, and Lorenzo Di Risio. "Meta-analysis of free-response studies, 1992–2008: Assessing the noise reduction model in parapsychology." Psychological bulletin 136.4 (2010): 471.</li>
+                <li>✍️ Abi‐Dargham, Anissa, et al. "Candidate biomarkers in psychiatric disorders: state of the field." World Psychiatry 22.2 (2023): 236-262.</li>
             </ul>
 
             <li><strong>Podcasts:</strong></li>
